--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": ""
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.9.8",
@@ -15,17 +15,9 @@
     "redis": "^0.10.3",
     "rethinkdb": "^1.14.0-0"
   },
-  "devDependencies": {
-    
-  },
+
   "engines": {
     "node": "0.10.x"
   },
-  "private": true,
-  
-  "config": {
-    // "blanket": {
-    //   "pattern": "pixel-service/lib/"
-    // }
-  }
+  "private": true
 }
