--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
   "name": "pixel-service",
   "description": "Pixel Service Code",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "repository": {
     "type": "git",
     "url": ""
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "mocha test/*"
   },
   "dependencies": {
     "express": "^4.9.8",
-    "forever": "^0.11.1",
     "redis": "^0.10.3",
     "rethinkdb": "^1.14.0-0"
   },
-
+  "dev-dependencies": {
+    "mocha": "~2.0.1"
+  },
   "engines": {
     "node": "0.10.x"
   },
