--- a/config.json
+++ b/config.json
@@ -2,6 +2,14 @@
 	"core": {
 		"rethinkdb": {
 			"host": "127.0.0.1"
+		},
+		"pool": {
+			"min": 1,
+			"max": 1,
+			"timeout": 30000
+		},
+		"arrdb": {
+			"retry": 1000
 		}
 	},
 	"api": {
