--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pixel-service",
   "description": "Pixel Service Code",
   "version": "0.0.1",
+  "main": "./lib/core/index.js",
   "repository": {
     "type": "git",
     "url": ""
