--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "sponsor",
-  "description": "Sponsor",
+  "name": "jennings",
+  "description": "Jennings",
   "author": "Mike Marcacci <mike.marcacci@thecontrolgroup.com>",
   "version": "0.0.1",
   "main": "./lib/core/index.js",
   "repository": {
     "type": "git",
-    "url": "git@github.com:the-control-group/sponsor.git"
+    "url": "git@github.com:the-control-group/jennings.git"
   },
   "scripts": {
     "start": "node server.js",
