--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "body-parser": "^1.10.1",
     "express": "^4.10.7",
+    "generic-pool": "^2.1.1",
     "jjv": "^1.0.2",
     "q": "^1.1.2",
     "rethinkdb": "^1.15.0"
