--- a/config.json
+++ b/config.json
@@ -5,6 +5,7 @@
 			"host": "127.0.0.1"
 		},
 		"pool": {
+			"log": false,
 			"min": 1,
 			"max": 1,
 			"timeout": 30000
@@ -15,8 +16,8 @@
 		"table": "answers"
 	},
 	"api": {
-
+		
 	},
-	"port": 3000,
-	"debug": true
+	"prefix": "/v1",
+	"port": 3000
 }
