--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "engines": {
     "node": "0.10.x"
   },
-  "private": true,
+  "private": false,
   "devDependencies": {
     "chai": "^1.10.0",
     "lodash": "^2.4.1"
