--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "mocha": "~2.0.1"
   },
   "engines": {
-    "node": "0.10.x"
+    "node": ">=0.10"
   },
   "private": false,
   "devDependencies": {
