--- a/package.json
+++ b/package.json
@@ -20,14 +20,12 @@
     "q": "^1.1.2",
     "rethinkdb": "^1.15.0"
   },
-  "dev-dependencies": {
-    "mocha": "~2.0.1"
-  },
   "engines": {
     "node": ">=0.10"
   },
   "private": false,
   "devDependencies": {
+    "mocha": "~2.0.1",
     "chai": "^1.10.0",
     "lodash": "^2.4.1"
   }
