--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Jennings",
   "author": "Mike Marcacci <mike.marcacci@thecontrolgroup.com>",
   "version": "1.2.2",
-  "main": "./lib/core/index.js",
+  "main": "./lib/index.js",
   "repository": {
     "type": "git",
     "url": "git@github.com:the-control-group/jennings.git"
